[upsert] feat: SubmissionSubmitCommand and refactors.